--- a/style.css
+++ b/style.css
@@ -1,20 +1,36 @@
 :root {
-    --basic-color: #000000;
-    --accent-color: #ffffff;
-    --border-code-color: #DCE1E6;
-    --background-code-color: #F6F8FA;
+    --color-text: #24292f;
+    --color-canvas-default: #ffffff;
+    --color-border-default: #d0d7de;
+    --color-backgroud: #f6f8fa;
+    --width-content: 960px;
 }
 
 .body {
-    margin: 5px;
+    margin: 0;
     padding: 0;
     min-width: 1000px;
-    font-family: "SF Mono", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 14px;
-    line-height: 24px;
-    font-weight: 400;
-    background-color: var(--accent-color);
-    color: var(--basic-color);
+    line-height: 1.5;
+    background-color: var(--color-backgroud);
+    color: var(--color-text);
+}
+
+.header {
+    position: relative;
+    box-sizing: border-box;
+    background-color: var(--color-text);
+    color: var(--color-canvas-default);
+}
+
+.header div {
+    margin: 0 auto;
+    width: var(--width-content);
+}
+
+h1, h2 {
+    margin: 0;
 }
 
 .main {
@@ -22,40 +38,32 @@
     flex-direction: column;
 }
 
-.section {
-    margin: 0 auto;
-    padding: 10px;
-    width: 1070px;
+.box {
+    width: var(--width-content);
+    margin: 5px auto;
+    background-color: var(--color-canvas-default);
+    border-color: var(--color-border-default);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 6px;
 }
 
-.btn {
-    font-family: inherit;
-    font-size: inherit;
-    line-height: inherit;
-    font-weight: inherit;
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 10px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
-    outline: none;
-    transition: 0.4s;
+.menu-number {
+    margin: 16px 0 0 16px;
 }
 
-.active, .btn:hover {
-    background-color: #ccc;
+.menu-description {
+    margin: 0 16px;
 }
 
-.panel {
-    padding: 0 10px;
-    background-color: var(--background-code-color);
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    border-bottom-left-radius: 6px;
-    border-bottom-right-radius: 6px;
+.scroll-up {
+    width: 40px;
+    height: 40px;
+    opacity: 0.3;
+    position: fixed;
+    bottom: 50px;
+    right: 100px;
+    display: none;
+    text-indent: -9999px;
+    background: url('img/icon_top.png') no-repeat;
 }
