--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1, h2 {
 }
 
 .box {
+    box-sizing: border-box;
     width: var(--width-content);
     margin: 5px auto;
     background-color: var(--color-canvas-default);
@@ -56,14 +57,16 @@ h1, h2 {
     margin: 0 16px;
 }
 
-.scroll-up {
-    width: 40px;
-    height: 40px;
-    opacity: 0.3;
-    position: fixed;
-    bottom: 50px;
-    right: 100px;
-    display: none;
-    text-indent: -9999px;
-    background: url('img/icon_top.png') no-repeat;
+.link {
+    padding: 16px;
+}
+
+a {
+    outline: none;
+    text-decoration: none;
+    color: black;
+}
+
+a:focus, a:hover {
+    border-bottom: 1px solid;
 }
